--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<meta http-equiv="refresh" content"0; url=./docs/build/html/index.html" />
+<html>
+<header><title>This is a title</title></header>
+<body>
+Hello World
+</body>
+</html>
